service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-hello-world-service-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello-world-service
