service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-hello-world-service-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 31600
  selector:
    app: hello-world-service
